--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -1,38 +1,44 @@
-.App {
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form {
+  width: 50%;
+  margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form form {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.form label {
+  width: 45%;
+  text-align: right;
+  margin: 5px 5px 5px auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form input {
+  width: 50%;
+  height: 20px;
+  margin: 5px auto 5px 5px;
+}
+
+.form p {
+  color: red;
+  width: 100%;
+  text-align: right;
+  height: auto;
+  margin: 0;
+}
+
+#submit {
+  width: 20%;
+  margin: 5px auto;
+}
+
+.user {
+  text-align: center;
 }
